ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__Lookup_Helper_Filter__c/LH__Lookup_Helper_Filter__c.object-meta.xml
<CustomObject>
    <label>Lookup Helper Filter</label>
    <nameField>
        <displayFormat>F-{00000000}</displayFormat>
        <label>Lookup Helper Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Helper Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>