ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__Lookup_Helper_Filter__c/fields/LH__Dupe_Lookup_Test__c.field-meta.xml
<CustomField>
    <fullName>LH__Dupe_Lookup_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dupe Record Lookup Test</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lookup Helper Filters</relationshipLabel>
    <relationshipName>Lookup_Helper_Filters2</relationshipName>
    <type>Lookup</type>
</CustomField>