ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__Lookup_Helper_Filter__c/fields/LH__Field__c.field-meta.xml
<CustomField>
    <fullName>LH__Field__c</fullName>
    <label>Field</label>
    <type>TextArea</type>
</CustomField>