ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__Lookup_Helper_Filter__c/fields/LH__Filter_Group__c.field-meta.xml
<CustomField>
    <fullName>LH__Filter_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter Group</label>
    <referenceTo>LH__Lookup_Helper_Filter_Group__c</referenceTo>
    <relationshipLabel>Lookup Helper Filters</relationshipLabel>
    <relationshipName>Lookup_Helper_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>