ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__Lookup_Helper_Filter__c/fields/LH__Operator__c.field-meta.xml
<CustomField>
    <fullName>LH__Operator__c</fullName>
    <label>Operator</label>
    <type>TextArea</type>
</CustomField>