ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__Lookup_Helper_Filter__c/fields/LH__Required__c.field-meta.xml
<CustomField>
    <fullName>LH__Required__c</fullName>
    <label>Required</label>
    <length>3</length>
    <type>Text</type>
</CustomField>